# interview-coach

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
agent/: .dockerignore  .env.example  Dockerfile  Dockerfile.test  agent.py  deploy-test-agent.sh  deploy-test-gce.sh  pyproject.toml  test_tool_agent.py
agent/agents/: __init__.py  base.py  standalone.py
agent/config/: __init__.py  personas.py  questions.py  seniority.py
agent/core/: __init__.py  api_client.py  gemini_tool_call_fix.py  logging.py  scorecard.py
agent/prompts/: __init__.py  agents.yaml  builder.py  interview.yaml  loader.py  personas.yaml  scorecard.yaml  seniority.yaml
agent/question_banks/: behavioral.json  go.json  hr.json  java.json  javascript.json  ml_ai.json  python.json  system_design.json  typescript.json
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ab0e47f61e38_initial_schema.py  ccd09d8aa486_add_user_id_to_sessions.py
backend/app/: config.py  main.py  seed.py
backend/app/api/: deps.py  router.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: engine.py  session.py
backend/app/middleware/: access_log.py  rate_limit.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  feedback.py  scorecard.py  session.py
backend/app/prompts/: __init__.py  analyze.yaml
backend/app/redis/: client.py
backend/app/schemas/: analyze.py  common.py  config.py  feedback.py  scorecard.py  session.py  token.py
(+99 files in other folders)
